--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,22 @@
-
-<head>
-	{% feed_meta %}
-</head>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>{{ page.title }}</title>
+		<link rel="stylesheet" href="/css/style.css">
+		{% feed_meta %}
+	</head>
+	<body>
+		<nav>
+			<a href="/">Home</a>
+			<a href="/blog/">Blog</a>
+		</nav>
+		<h1>{{ page.title }}</h1>
+		<section>
+			{{ content }}
+		</section>
+		<footer>
+			&copy; to me
+		</footer>
+	</body>
+</html>
