--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
-  <a href="https://creativecommons.org/licenses/by-nc/3.0/deed.en_US">
+	<a href="https://raw.githubusercontent.com/TrevCan/trevcan.github.io/master/LICENSE">
     <span>
         <b>{{ site.owner}}</b>
     </span>
     {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
-    <span>© {{ currentyear }}</span>
+    <span>© {{ currentyear }} to ∞</span>
   </a>
 </footer>
