last commit before removing jekyll

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <div>
-    <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">
+    <a href="https://trevcan.github.io">
 
     <h1>trevcan@internets /random/path/idk $</h1>
     </a>
