fix blog main link

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="$BLOG_URL_ROOT">
+				<a href="/$BLOG_URL_ROOT">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
