update header, add wl

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="/$BLOG_URL_ROOT">
+				<a href="index.html">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -21,7 +21,8 @@
 					<a href="index.html"><h2 class="header-link">Index</h2></a>
 					<a href="about.html"><h2 class="header-link">About</h2></a>
 					<a href="rss.xml"><h2 class="header-link">RSS</h2></a>
-					<a href="atom.xml"><h2 class="header-link">/atom</h2></a>
+					<a href="atom.xml"><h2 class="header-link"> atom</h2></a>
+					<a href="wl.html"><h2 class="header-link">later</h2></a>
 				</div>
 			</div>
 		</header>
