remove wikimedia hotlinking

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
 		<title>$TITLE</title>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
+		<link rel="shortcut icon" href="https://trevcan.duckdns.org/files/assets/blog/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
 
