--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -4,7 +4,7 @@
         <title>
             $TITLE
         </title>
-        <link href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" rel="shortcut icon" type="image/png"/>
+        <link href="https://trevcan.duckdns.org/files/assets/blog/tux-pipe.png" rel="shortcut icon" type="image/png"/>
         <link href="main.css" rel="stylesheet"/>
         <header>
             <div>
