add code to <code> main.css and change defualt code color to nice dracula

--- a/data/main.css
+++ b/data/main.css
@@ -216,6 +216,15 @@ pre {
     overflow: auto;
     overflow-y: hidden;
 }
+
+code {
+    color: #b5e853;
+    color: #aa759f;
+    color: #f21915;
+    color: #f215ee;
+	overflow: auto;
+}
+
 code.highlighter-rouge {
     background: rgba(0,0,0,0.9);
     border: 1px solid rgba(255,255,255,0.15);
