add 2d partial exam

--- a/data/.mit/ppg/2do.parcial.practica/main.css
+++ b/data/.mit/ppg/2do.parcial.practica/main.css
@@ -308,6 +308,13 @@ footer {
     min-height: calc(100vh - 100px);
 }
 
+button {
+	color: black;
+}
+
 input {
-	color: blue;
+	color: black;
+	background-color: white;
+	background: white;
+
 }
