--- a/templates/article_header.html
+++ b/templates/article_header.html
@@ -2,5 +2,15 @@
 
 	<h1>$TITLE</h1>
 
-	<i>Last edited: $DATE_EDITED </i>
+	<table>
+		<tr>
+			<td><i>Posted on:</i></td>
+			<td><i>$DATE_POSTED</i></td>
+
+		</tr>
+		<tr>
+			<td><i>Last edited:</i></td>
+			<td><i>$DATE_EDITED</i></td>
+		</tr>
+	</table>
 
