man page and modify css

--- a/data/main.css
+++ b/data/main.css
@@ -279,13 +279,23 @@ hr {
 }
 a {
     color: #63c0f5;
-    text-shadow: 0 0 5px rgba(104,182,255,0.5);
+
+//	color: #8cb5cb;
+	/* gaby's recommendation, oxford blue.
+	 */
+
+//	text-shadow: 0 0 5px rgba(104,182,255,0.5);
+	text-decoration: none;
+	
+
 }
 a:active,
-a:focus {
+a:focus,
+a:hover {
     outline: 0;
     border: none;
     -moz-outline-style: none;
+	text-decoration: underline #61ef1a;
 }
 .cf:after,
 .cf:before {
