add viewport stuff to scale automatically based on screen width

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 		<title>$TITLE</title>
-		<meta charset="utf-8">
+		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="https://trevcan.duckdns.org/files/assets/blog/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
