change to new domain name, remove useless comments

--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -4,17 +4,11 @@
         <title>
             $TITLE
         </title>
-        <link href="https://trevcan.duckdns.org/files/assets/blog/tux-pipe.png" rel="shortcut icon" type="image/png"/>
+        <link href="https://files.thetrevor.tech/assets/blog/tux-pipe.png" rel="shortcut icon" type="image/png"/>
         <link href="main.css" rel="stylesheet"/>
         <header>
             <div>
-                <!-- 
-																				<a href="https://trevcan.github.io"> 
-																-->
                 <a href="$BLOG_URL_ROOT">
-                    <!--
-																								<h1>trevcan@internets /random/path/idk $</h1>
-																				-->
                     <h1>
                         $BLOG_WEBSITE_NAME
                     </h1>
