make all links relative

--- a/templates/index_header.html
+++ b/templates/index_header.html
@@ -1,1 +1,1 @@
-<a href="https://blog.thetrevor.tech/"><div style='font-size: small;' class="header-link">yes, https works</div></a>
+<a href="$BLOG_HTTPS_LINK"><div style='font-size: small;' class="header-link">yes, https works</div></a>
