--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -4,7 +4,7 @@
         <title>
             $TITLE
         </title>
-        <link href="https://files.thetrevor.tech/assets/blog/tux-pipe.png" rel="shortcut icon" type="image/png"/>
+        <link href="assets/tux-pipe.png" rel="shortcut icon" type="image/png"/>
         <link href="main.css" rel="stylesheet"/>
         <header>
             <div>
