--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
 		<title>$TITLE</title>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="https://files.thetrevor.tech/assets/blog/Crystal_Clear_app_tux.png" type="image/png">
+		<link rel="shortcut icon" href="assets/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
 
