update index header with OpenID auth

--- a/templates/index_header.html
+++ b/templates/index_header.html
@@ -1,1 +1,6 @@
 <a href="$BLOG_HTTPS_LINK"><div style='font-size: small;' class="header-link">yes, https works</div></a>
+
+<link rel="openid.delegate" href="https://blog.thetrevor.tech" />
+<link rel="openid.server" href="https://openid.indieauth.com/openid" />
+<link rel="me" href="https://github.com/trevcan" />
+<link rel="pgpkey" href="https://blog.thetrevor.tech/pubkey">
